# retirement

./: .gitignore  CLAUDE.md  app.py  main.py  pyproject.toml
prompts/: requirements.md
src/retirement/: __init__.py
src/retirement/engine/: dividends.py  growth.py  lt_harvesting.py  medical.py  projector.py  roth_conversion.py  withdrawal.py
src/retirement/loaders/: asset_loader.py  scenario_loader.py
src/retirement/models/: holding.py  scenario.py  snapshot.py
src/retirement/output/: writer.py
src/retirement/tax/: brackets.py  calculator.py
tests/: conftest.py  test_asset_loader.py  test_dividends.py  test_greeting.py  test_growth.py  test_holding.py  test_lt_harvesting.py  test_main.py  test_medical.py  test_projector.py  test_roth_conversion.py  test_scenario_loader.py  test_tax_calculator.py  test_withdrawal.py  test_writer.py
